# todo_list_kernel

./: .gitignore  Cargo.toml  Cross.toml  README.md
application/: Cargo.toml
application/src/: lib.rs
application/src/ability/: mod.rs
application/src/ability/share/: user.rs
application/src/ability/task/: mod.rs  task_create_ability.rs  task_update_ability.rs
application/src/ability/task/assembler/: mod.rs
application/src/ability/task/cmd/: create_task_ability_command.rs  mod.rs  task_create_command.rs  task_update_command.rs
application/src/ability/user/: mod.rs  user_create_ability.rs  user_reset_info_ability.rs  user_update_ability.rs
application/src/ability/user/cmd/: mod.rs  user_create_cmd.rs  user_create_command.rs  user_reset_info_cmd.rs  user_update_cmd.rs  user_update_command.rs
application/src/command/: itask_application_service.rs  iuser_application_service.rs  mod.rs
application/src/command/service/: mod.rs  task_application_service.rs  user_application_service.rs
application/src/query/: iuser_application_service.rs  mod.rs
application/src/query/model/: mod.rs
application/src/query/model/common/: mod.rs
application/src/query/model/common/dto/: mod.rs
application/src/query/model/user/dto/: cud.rs  mod.rs
application/src/query/model/user/qry/: user.rs
application/src/query/service/: mod.rs  user_application_service.rs
base/: Cargo.toml
base/src/: lib.rs
base/src/ddd/: ability.rs  aggregate.rs  application_service.rs  command.rs  domain_service.rs  entity.rs  mod.rs  repository.rs  value_object.rs
base/src/event/: domain_event_publisher.rs  domain_event_repository.rs  event.rs  mod.rs
base/src/json/: json.rs
common/: Cargo.toml
common/locales/: locale.json
common/src/: config.rs  contextx.rs  errorx.rs  i18n.rs  jwt.rs  lib.rs  log.rs  res.rs  utils.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/aggregate/: mod.rs  preclude.rs
domain/src/aggregate/classify/model/: classify.rs  mod.rs
domain/src/aggregate/classify/repository/: iclassify_repository.rs  mod.rs
domain/src/aggregate/devide/model/: devide.rs  mod.rs
domain/src/aggregate/devide/repository/: idevide_repository.rs  mod.rs
domain/src/aggregate/task/: mod.rs
domain/src/aggregate/task/model/: mod.rs  task.rs  task_content.rs  task_mode.rs
domain/src/aggregate/task/repository/: itask_content_repository.rs  itask_repository.rs  mod.rs
domain/src/aggregate/task_mode/: mod.rs
domain/src/aggregate/task_mode/model/: mod.rs  task_mode.rs
domain/src/aggregate/task_mode/repository/: itask_mode_repository.rs  mod.rs
domain/src/aggregate/team/model/: team.rs
domain/src/aggregate/team/repository/: item_repository.rs
domain/src/aggregate/user/: mod.rs
domain/src/aggregate/user/model/: mod.rs  resource.rs  team.rs  user.rs
domain/src/aggregate/user/repository/: iuser_repository.rs  mod.rs
domain/src/aggregate/user/service/: iuser_domain_service.rs  mod.rs
domain/src/aggregate/user/service/implx/: mod.rs  user_domain_service.rs
domain/src/share/: mod.rs
domain/src/share/value_object/: classify_order_type.rs  classify_show_type.rs  mod.rs  task_date.rs  task_mode_config.rs  task_mode_type.rs  user_type.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/db/: mod.rs
infrastructure/src/db/converter/: classify_converter.rs  devide_converter.rs  mod.rs  preclude.rs  task_content_converter.rs  task_converter.rs  task_mode_converter.rs  team_converter.rs  user_converter.rs
infrastructure/src/db/model/: classify.rs  classify_po.rs  common.rs  devide.rs  devide_po.rs  dto_po.rs  mod.rs  preclude.rs  resource_po.rs  task.rs  task_content.rs  task_content_po.rs  task_mode.rs  task_mode_po.rs  task_po.rs  team.rs  team_po.rs  user.rs  user_po.rs  user_to_team_po.rs
infrastructure/src/db/repository/: classify_repository.rs  devide_repository.rs  mod.rs  task_content_repository.rs  task_mode_repository.rs  task_repository.rs  team_repository.rs  user_repository.rs
infrastructure/src/service/: mod.rs  user_domain_service.rs
interaction/: Cargo.toml
interaction/src/: lib.rs
interaction/src/handle/: config.rs  mod.rs  res.rs  task.rs  user.rs
interaction/src/router/: router.rs
macrox/: Cargo.toml
macrox/src/: lib.rs  locale.rs
middlewarex/: Cargo.toml
middlewarex/src/: ctx.rs  jwt.rs  lib.rs  validator.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
