# [package]
# name = "todo_list_kernel"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "migration",
    "macrox",
    "common",
    "base",
    "domain",
    "infrastructure",
    "application",
    "interaction",
]


[workspace.dependencies]
# macro
syn = "2"
quote = "1"
proc-macro2 = "1"

# web framework
axum = "0.6.12"
# 中间件
tower = "0.4"        # features = ["full"]
tower-http = "0.4.0"

# orm
sea-orm = { version = "0.11", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
sea-query = "0"

# async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

chrono = "0.4"
anyhow = "1"
# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# uuid = {version="1",features = [
#     "v4",                # Lets you generate random UUIDs
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]}
# ulid
rusty_ulid = "2"
# 单例
once_cell = "1.17.0"
# 枚举转字符串
strum = "0.24"
strum_macros = "0.24"

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
tracing-appender = "0.2"

# cli 库
clap = { version = "4.2.1", features = ["derive"] }
# jwt
jsonwebtoken = "8"
# 正则表达式
regex = "1"
