[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macrox = { path = "../macrox" }

tracing = { workspace = true, features = ["default"] }
# tracing-core = { version = "0.1",features=["default"]}
# tracing-core = {workspace=true,
# tracing-subscriber = {workspace=true}
tracing-subscriber = { workspace = true, features = [
    "default",
    "env-filter",
    "registry",
    "json",
] }
tracing-appender = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
sea-orm = { workspace = true }
rusty_ulid = { wrokspace = true }
once_cell = { wrokspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
