[package]
name = "macrox"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path="./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn={workspace=true}
quote={workspace=true}
proc-macro2={workspace=true}
serde={workspace=true}
serde_json={workspace=true}
regex = {workspace=true}
# serde_yaml={workspace=true}