[package]
name = "middlewarex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
infrastructure = { path = "../infrastructure" }

tokio = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }
validator = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
