[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
# async-std = { version = "1", features = ["attributes", "tokio1"] }
# 用于创建sqlite文件
# rusqlite = { version = "0.27.0", features = ["bundled"] }
# sqlite = "0.23"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
